# DTU_E23_41934_Advanced-BIM

./: .gitignore  README.md  environment.yml
.github/workflows/: build_docs.yml  python-package-conda-A3.yml  python-package-conda.yml
Assignments/A1/: AdvBIM-A1_Dashboard.ipynb
Assignments/A2/: AdvBIM-A2_Analysis.ipynb  Code-snippets.ipynb  README.md  Simple-Analytical-Model.ipynb  analyticalModel.py  environment.yml  geomUtils.py  ifcUtils.py  main.py  (+4 more)
Assignments/A3/: README.md  Simple-Analytical-Model.ipynb  createIfcAnalyticalModel.py  doPyNiteFEA.py  environment.yml  main.py  meta.yaml  pyproject.toml
Assignments/A3/diagrams/: IDM-abstract.bpmn  IDM-implemented.bpmn
Assignments/A3/docs/: environment.yml
Assignments/A3/docs/source/: A3.rst  A4.rst  A5.rst  conf.py  index.rst  installation.rst  notebooks.rst  pyconbim.rst
Assignments/A3/docs/source/notebooks/: A4-Tutorial.ipynb
Assignments/A3/input/: LLYN-corrections.json  config.json  simple-frame-slab-walls-corrections.json
Assignments/A3/models/: .gitignore  simple-frame-with-slab-holes.ifc  simple-frame-with-slab-wall.ifc  simple-frame-with-slab.ifc
Assignments/A3/notebooks/: A4-Tutorial.ipynb
Assignments/A3/src/PyConBIM/: __init__.py  utils.py
Assignments/A3/src/pyconbim/: __init__.py  analyticalModel.py  geomUtils.py  ifcUtils.py  modelPreprocessor.py  pyniteInterface.py  rendering.py  utils.py
Assignments/A3/tests/: test_beams.py  test_example.py  test_geomUtils.py
models/: simple-frame-with-slab-wall.ifc  simple-frame.ifc
tests/: test_beams.py  test_example.py  test_geomUtils.py
(+20 files in other folders)
